--- a/about.html
+++ b/about.html
@@ -50,22 +50,67 @@
 
     <!-- Navbar End -->
 
-    <!-- Carousel Start -->
-    <div class="container-fluid p-0 mb-5">
-        <div id="blog-carousel" class="carousel slide overlay-bottom" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="w-100" src="img/carousel-1.jpg" alt="Image">
-                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <h2 class="text-primary font-weight-medium m-0">Sabor y energía que le da chispa a tu vida </h2>
-                        <h1 class="display-1 text-white m-0">ENERGIX</h1>
-                        <h2 class="text-white m-0">Desde 2023</h2>
-                    </div>
-                </div>
+    <!-- Page Header Start -->
+    <div class="container-fluid page-header mb-5 position-relative overlay-bottom">
+        <div class="d-flex flex-column align-items-center justify-content-center pt-0 pt-lg-5" style="min-height: 400px">
+            <h1 class="display-4 mb-3 mt-0 mt-lg-5 text-white text-uppercase">Sobre Nosotros</h1>
+            <div class="d-inline-flex mb-lg-5">
+                <p class="m-0 text-white"><a class="text-white" href="">Inicio</a></p>
+                <p class="m-0 text-white px-2">/</p>
+                <p class="m-0 text-white">Sobre Nosotros</p>
+            </div>
         </div>
     </div>
+    <!-- Page Header End -->
 
-    <!-- Footer Start -->
+<!-- About Start -->
+<div class="container-fluid py-5">
+    <div class="container">
+        <div class="section-title">
+            <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">Sobre Nosotros</h4>
+            <h1 class="display-4"></h1>
+        </div>
+        <div class="row">
+            <div class="col-lg-6">
+                <h1 class="mb-3">Nuestra Historia</h1>
+                <p style="text-align: justify;">Hace un tiempo, cuatro mujeres apasionadas y amantes del café se unieron con un sueño en común: 
+                    llevar la magia del café a un nuevo nivel de dulzura y energía. Con un espíritu emprendedor, decidieron 
+                    combinar sus talentos y conocimientos para crear "LiKaleas", una marca que revolucionaría el mundo de 
+                    los caramelos. Cada una aportó su experiencia única en áreas como la gastronomía, la gestión empresarial,
+                    la creatividad y la sostenibilidad. Juntas, transformaron su visión en realidad, desarrollando caramelos 
+                    a base de café que no solo deleitan los paladares, sino que también recargan de energía. Su compromiso 
+                    con la calidad, la innovación y la responsabilidad social ha impulsado a "LiKaleas" a convertirse en un 
+                    referente en la industria, uniendo a las personas con momentos dulces y vivaces. En el año actual,
+                    "LiKaleas" es una realidad que sigue endulzando la vida de quienes buscan un sabor auténtico y energía natural.
+                </p>
+            </div>
+            <div class="col-lg-6">
+                <div class="position-relative h-100">
+                    <img class="position-absolute" src="img/4amigas.jpg" style="width: 100%; object-fit: cover; height: 100%;">
+                </div>
+            </div>
+            <div class="col-lg-6 py-5 py-lg-0">
+                <h1 class="mb-3">Misión</h1>
+                <p style="text-align: justify;">Nuestra misión en LiKaleas es impulsar un cambio en la industria al proporcionar productos energéticos excepcionales que marcan la diferencia en el mercado. Nos comprometemos a colaborar con las tendencias sostenibles y a concienciar a nuestros clientes sobre la importancia de estas tendencias medioambientales. Estamos dedicados a ofrecer productos de alta calidad que no solo satisfacen las necesidades de energía de nuestros clientes, sino que también contribuyen al bienestar del planeta.
+                </p>
+            </div>
+            <div class="col-lg-6 py-5 py-lg-0">
+                <h1 class="mb-3">Visión</h1>
+                <p style="text-align: justify; font-size: 18px;">Nuestra visión es liderar la industria de los productos energizantes naturales, siendo la principal fuente de inspiración para un
+                    estilo de vida activo y saludable. A través de soluciones sostenibles y deliciosas, 
+                    nos esforzamos por empoderar a las personas para que alcancen su máximo potencial, proporcionando energía de manera natural. 
+                    Nos comprometemos a marcar la diferencia, promoviendo una vida activa, equilibrada y consciente, al tiempo que impulsamos el  bienestar de nuestros clientes y el cuidado del medio ambiente.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- About End -->
+
+
+
+
+<!-- Footer Start -->
     <div class="container-fluid footer text-white mt-5 pt-5 px-0 position-relative overlay-top">
         <div class="row mx-0 pt-5 px-sm-3 px-lg-5 mt-4">
             <div class="col-lg-3 col-md-6 mb-5">
@@ -112,6 +157,8 @@
         </div>
     </div>
     <!-- Footer End -->
+
+
 
 
     <!-- Back to Top -->
