--- a/anuncios.html
+++ b/anuncios.html
@@ -24,6 +24,28 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.min.css" rel="stylesheet">
+      <style>
+        .evento, .evento-pasado {
+            border: 1px solid #e0e0e0;
+            padding: 20px;
+            margin: 20px 0;
+            display: flex;
+            align-items: center;
+        }
+        .evento, .evento-pasado  img {
+            width: 100px;
+            height: 100px;
+            margin-right: 20px;
+        }
+        .evento, .evento-pasado button {
+            margin-top: 20px;
+            padding: 10px 15px;
+            border: none;
+            background-color: #007BFF;
+            color: #ffffff;
+            cursor: pointer;
+        }
+    </style>
 </head>
 
 <body>
@@ -43,6 +65,7 @@
                     <a href="service.html" class="nav-item nav-link " style="color:#964B00">Productos</a>
                     <a href="anuncios.html" class="nav-item nav-link " style="color:#964B00">Eventos</a>
                     <a href="contact.html" class="nav-item nav-link  " style="color:#964B00">Contactanos</a>
+
                 </div>
             </div>
         </nav>
@@ -50,20 +73,78 @@
 
     <!-- Navbar End -->
 
-    <!-- Carousel Start -->
-    <div class="container-fluid p-0 mb-5">
-        <div id="blog-carousel" class="carousel slide overlay-bottom" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="w-100" src="img/carousel-1.jpg" alt="Image">
-                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <h2 class="text-primary font-weight-medium m-0">Sabor y energía que le da chispa a tu vida </h2>
-                        <h1 class="display-1 text-white m-0">ENERGIX</h1>
-                        <h2 class="text-white m-0">Desde 2023</h2>
-                    </div>
-                </div>
+
+    <!-- Page Header Start -->
+    <div class="container-fluid page-header mb-5 position-relative overlay-bottom">
+        <div class="d-flex flex-column align-items-center justify-content-center pt-0 pt-lg-5" style="min-height: 400px">
+            <h1 class="display-4 mb-3 mt-0 mt-lg-5 text-white text-uppercase">Eventos</h1>
+            <div class="d-inline-flex mb-lg-5">
+                <p class="m-0 text-white"><a class="text-white" href="">Inicio</a></p>
+                <p class="m-0 text-white px-2">/</p>
+                <p class="m-0 text-white">Eventos</p>
+            </div>
         </div>
     </div>
+    <!-- Page Header End -->
+
+
+    <!-- Eventos  -->
+    <div class="container-fluid pt-5">
+        <div class="container">
+            <div class="section-title">
+                <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">Contáctenos</h4>
+                <h1 class="display-4">Siéntese libre de contactarnos </h1>
+            </div>
+        </div>
+        <div class="evento">
+            <img src="ruta-imagen-evento1.jpg" alt="Imagen del evento 1">
+            <div>
+                <h2>Título del Evento 1</h2>
+                <p>Fecha: DD/MM/AAAA</p>
+                <p>Ubicación: Nombre del lugar</p>
+                <p>Descripción corta del evento.</p>
+                <button>Más información</button>
+            </div>
+        </div>
+
+        <div class="evento">
+            <img src="ruta-imagen-evento2.jpg" alt="Imagen del evento 2">
+            <div>
+                <h2>Título del Evento 2</h2>
+                <p>Fecha: DD/MM/AAAA</p>
+                <p>Ubicación: Nombre del lugar</p>
+                <p>Descripción corta del evento.</p>
+                <button>Más información</button>
+            </div>
+        </div>
+
+        <h2>Eventos Pasados</h2>
+
+        <div class="evento-pasado">
+            <img src="ruta-imagen-evento-pasado1.jpg" alt="Imagen del evento pasado 1">
+            <div>
+                <h2>Título del Evento Pasado 1</h2>
+                <p>Fecha: DD/MM/AAAA</p>
+                <p>Ubicación: Nombre del lugar</p>
+                <p>Resumen o descripción corta del evento pasado.</p>
+                <button>Ver Resumen</button>
+            </div>
+        </div>
+
+        <div class="evento-pasado">
+            <img src="ruta-imagen-evento-pasado2.jpg" alt="Imagen del evento pasado 2">
+            <div>
+                <h2>Título del Evento Pasado 2</h2>
+                <p>Fecha: DD/MM/AAAA</p>
+                <p>Ubicación: Nombre del lugar</p>
+                <p>Resumen o descripción corta del evento pasado.</p>
+                <button>Ver Resumen</button>
+            </div>
+        </div>
+
+
+    </div>
+
 
     <!-- Footer Start -->
     <div class="container-fluid footer text-white mt-5 pt-5 px-0 position-relative overlay-top">
