--- a/anuncios.html
+++ b/anuncios.html
@@ -25,19 +25,19 @@
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.min.css" rel="stylesheet">
       <style>
-        .evento, .evento-pasado {
+        .evento {
             border: 1px solid #e0e0e0;
             padding: 20px;
             margin: 20px 0;
             display: flex;
             align-items: center;
         }
-        .evento, .evento-pasado  img {
+        .evento, img {
             width: 100px;
             height: 100px;
             margin-right: 20px;
         }
-        .evento, .evento-pasado button {
+        .evento button {
             margin-top: 20px;
             padding: 10px 15px;
             border: none;
@@ -120,7 +120,7 @@
 
         <h2>Eventos Pasados</h2>
 
-        <div class="evento-pasado">
+        <div class="evento">
             <img src="ruta-imagen-evento-pasado1.jpg" alt="Imagen del evento pasado 1">
             <div>
                 <h2>Título del Evento Pasado 1</h2>
@@ -131,7 +131,7 @@
             </div>
         </div>
 
-        <div class="evento-pasado">
+        <div class="evento">
             <img src="ruta-imagen-evento-pasado2.jpg" alt="Imagen del evento pasado 2">
             <div>
                 <h2>Título del Evento Pasado 2</h2>
