--- a/anuncios.html
+++ b/anuncios.html
@@ -32,7 +32,7 @@
             display: flex;
             align-items: center;
         }
-        .evento, img {
+        .evento img {
             width: 100px;
             height: 100px;
             margin-right: 20px;
