--- a/anuncios.html
+++ b/anuncios.html
@@ -92,8 +92,8 @@
     <div class="container-fluid pt-5">
         <div class="container">
             <div class="section-title">
-                <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">Contáctenos</h4>
-                <h1 class="display-4">Siéntese libre de contactarnos </h1>
+                <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">Participa en nuestras próximas actividades. </h4>
+                <h1 class="display-4">Eventos para tí </h1>
             </div>
         </div>
         <div class="evento">
@@ -119,29 +119,9 @@
         </div>
 
         <h2>Eventos Pasados</h2>
-
-        <div class="evento">
-            <img src="ruta-imagen-evento-pasado1.jpg" alt="Imagen del evento pasado 1">
-            <div>
-                <h2>Título del Evento Pasado 1</h2>
-                <p>Fecha: DD/MM/AAAA</p>
-                <p>Ubicación: Nombre del lugar</p>
-                <p>Resumen o descripción corta del evento pasado.</p>
-                <button>Ver Resumen</button>
-            </div>
+        <div class="no-eventos">
+            <p>Actualmente no tenemos eventos pasados para mostrar. ¡Mantente atento para futuros eventos y novedades!</p>
         </div>
-
-        <div class="evento">
-            <img src="ruta-imagen-evento-pasado2.jpg" alt="Imagen del evento pasado 2">
-            <div>
-                <h2>Título del Evento Pasado 2</h2>
-                <p>Fecha: DD/MM/AAAA</p>
-                <p>Ubicación: Nombre del lugar</p>
-                <p>Resumen o descripción corta del evento pasado.</p>
-                <button>Ver Resumen</button>
-            </div>
-        </div>
-
 
     </div>
 
