--- a/anuncios.html
+++ b/anuncios.html
@@ -171,7 +171,8 @@
             <p class="mb-2 text-white">Copyright &copy; <a class="font-weight-bold" href="#">Domain</a>. All Rights Reserved.</a></p>
             <p class="m-0 text-white">Designed by <a class="font-weight-bold" href="https://htmlcodex.com">Hotaru@</a></p>
         </div>
-    </div>
+            <p class="m-0 text-white">Designed by <a class="font-weight-bold" href="https://htmlcodex.com">HTML Codex - Hotaru@</a></p>
+        </div>
     <!-- Footer End -->
 
 
