--- a/anuncios.html
+++ b/anuncios.html
@@ -55,7 +55,7 @@
                 <a href="#">
                     <img src="img/logoFondo.png" alt="LiKaleas" style="width:20%;">
                 </a>
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+            <button type="button" class="navbar-toggler btn-negro" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse" >
