--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.min.css" rel="stylesheet">
+    <style type="text/css">
+        .btn-negro {
+        background-color: #552213;
+        border: 3px; 
+        color: white;
+        }
+    </style>
 </head>
 
 <body>
