--- a/about.html
+++ b/about.html
@@ -24,6 +24,14 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.min.css" rel="stylesheet">
+        <style>
+            .btn-negro {
+            background-color: #552213;
+            border: 3px; 
+            color: white;
+            }
+
+        </style>
 </head>
 
 <body>
