--- a/anuncios.html
+++ b/anuncios.html
@@ -45,6 +45,10 @@
             color: #ffffff;
             cursor: pointer;
         }
+        .btn-negro {
+        background-color: #552213;
+        border: 3px; 
+        color: white;
     </style>
 </head>
 
@@ -171,6 +175,7 @@
             <p class="mb-2 text-white">Copyright &copy; <a class="font-weight-bold" href="#">Domain</a>. All Rights Reserved.</a></p>
             <p class="m-0 text-white">Designed by <a class="font-weight-bold" href="https://htmlcodex.com">HTML Codex - Hotaru@</a></p>
         </div>
+    </div>
     <!-- Footer End -->
 
 
