--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,32 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.min.css" rel="stylesheet">
+      <style>
+        .evento {
+            border: 1px solid #e0e0e0;
+            padding: 20px;
+            margin: 20px 0;
+            display: flex;
+            align-items: center;
+        }
+        .evento img {
+            width: 100px;
+            height: 100px;
+            margin-right: 20px;
+        }
+        .evento button {
+            margin-top: 20px;
+            padding: 10px 15px;
+            border: none;
+            background-color: #007BFF;
+            color: #ffffff;
+            cursor: pointer;
+        }
+        .btn-negro {
+        background-color: #552213;
+        border: 3px; 
+        color: white;
+    </style>
 </head>
 
 <body>
@@ -43,6 +69,7 @@
                     <a href="service.html" class="nav-item nav-link " style="color:#964B00">Productos</a>
                     <a href="anuncios.html" class="nav-item nav-link " style="color:#964B00">Eventos</a>
                     <a href="contact.html" class="nav-item nav-link  " style="color:#964B00">Contactanos</a>
+
                 </div>
             </div>
         </nav>
@@ -54,80 +81,53 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header mb-5 position-relative overlay-bottom">
         <div class="d-flex flex-column align-items-center justify-content-center pt-0 pt-lg-5" style="min-height: 400px">
-            <h1 class="display-4 mb-3 mt-0 mt-lg-5 text-white text-uppercase">Contactanos</h1>
+            <h1 class="display-4 mb-3 mt-0 mt-lg-5 text-white text-uppercase">Eventos</h1>
             <div class="d-inline-flex mb-lg-5">
                 <p class="m-0 text-white"><a class="text-white" href="">Inicio</a></p>
                 <p class="m-0 text-white px-2">/</p>
-                <p class="m-0 text-white">Contactanos</p>
+                <p class="m-0 text-white">Eventos</p>
             </div>
         </div>
     </div>
     <!-- Page Header End -->
 
 
-    <!-- Contact Start -->
+    <!-- Eventos  -->
     <div class="container-fluid pt-5">
         <div class="container">
             <div class="section-title">
-                <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">Contáctenos</h4>
-                <h1 class="display-4">Siéntese libre de contactarnos </h1>
-            </div>
-            <div class="row px-3 pb-2">
-                <div class="col-sm-4 text-center mb-3">
-                    <i class="fa fa-2x fa-map-marker-alt mb-3 text-primary"></i>
-                    <h4 class="font-weight-bold">Dirección</h4>
-                    <p>Parque Industrial -Arequipa</p>
-                </div>
-                <div class="col-sm-4 text-center mb-3">
-                    <i class="fa fa-2x fa-phone-alt mb-3 text-primary"></i>
-                    <h4 class="font-weight-bold">Teléfono</h4>
-                    <p>+54 258760</p>
-                </div>
-                <div class="col-sm-4 text-center mb-3">
-                    <i class="far fa-2x fa-envelope mb-3 text-primary"></i>
-                    <h4 class="font-weight-bold">Email</h4>
-                    <p>likalees@gmail.com</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6 pb-5">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d122463.97289791548!2d-71.5694988945609!3d-16.424869411816704!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91424a8d0a822a21%3A0x7714399a128ffb66!2sParque%20Industrial%20de%20Arequipa%2C%20Arequipa!5e0!3m2!1ses!2spe!4v1697947628997!5m2!1ses!2spe" width="550" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-                <div class="col-md-6 pb-5">
-                    <div class="contact-form">
-                        <div id="success"></div>
-                        <form name="sentMessage" id="contactForm" novalidate="novalidate">
-                            <div class="control-group">
-                                <input type="text" class="form-control bg-transparent p-4" id="name" placeholder="Nombre"
-                                    required="required" data-validation-required-message="Please enter your name" />
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div class="control-group">
-                                <input type="email" class="form-control bg-transparent p-4" id="email" placeholder="Email"
-                                    required="required" data-validation-required-message="Please enter your email" />
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div class="control-group">
-                                <input type="text" class="form-control bg-transparent p-4" id="subject" placeholder="Titulo"
-                                    required="required" data-validation-required-message="Please enter a subject" />
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div class="control-group">
-                                <textarea class="form-control bg-transparent py-3 px-4" rows="5" id="message" placeholder="Mensaje"
-                                    required="required"
-                                    data-validation-required-message="Please enter your message"></textarea>
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div>
-                                <button class="btn btn-primary font-weight-bold py-3 px-5" type="submit" id="sendMessageButton">Enviar Mensaje</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
+                <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">Participa en nuestras próximas actividades. </h4>
+                <h1 class="display-4">Eventos para tí </h1>
             </div>
         </div>
+        <div class="evento">
+            <img src="ruta-imagen-evento1.jpg" alt="Imagen del evento 1">
+            <div>
+                <h2>Título del Evento 1</h2>
+                <p>Fecha: DD/MM/AAAA</p>
+                <p>Ubicación: Nombre del lugar</p>
+                <p>Descripción corta del evento.</p>
+                <button>Más información</button>
+            </div>
+        </div>
+
+        <div class="evento">
+            <img src="ruta-imagen-evento2.jpg" alt="Imagen del evento 2">
+            <div>
+                <h2>Título del Evento 2</h2>
+                <p>Fecha: DD/MM/AAAA</p>
+                <p>Ubicación: Nombre del lugar</p>
+                <p>Descripción corta del evento.</p>
+                <button>Más información</button>
+            </div>
+        </div>
+
+        <h2>Eventos Pasados</h2>
+        <div class="no-eventos">
+            <p>Actualmente no tenemos eventos pasados para mostrar. ¡Mantente atento para futuros eventos y novedades!</p>
+        </div>
+
     </div>
-    <!-- Contact End -->
 
 
     <!-- Footer Start -->
@@ -177,8 +177,6 @@
         </div>
     </div>
     <!-- Footer End -->
-
-
 
 
     <!-- Back to Top -->
