--- a/service.html
+++ b/service.html
@@ -21,9 +21,15 @@
     <!-- Libraries Stylesheet -->
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
-
-    <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.min.css" rel="stylesheet">
+    <!-- Customized Bootstrap Stylesheet -->
+        <style>
+        .btn-negro {
+        background-color: #552213;
+        border: 3px; 
+        color: white;
+        }
+        </style>
 </head>
 
 <body>
