--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
                     <a href="inicio.html" class="nav-item nav-link active" style="color:#964B00">Inicio</a>
                     <a href="about.html" class="nav-item nav-link " style="color:#964B00">Sobre Nosotros</a>
                     <a href="service.html" class="nav-item nav-link " style="color:#964B00">Catalogo</a>
-                    <a href="anuncios.html" class="nav-item nav-link " style="color:#964B00">Eventos</a>
+                    <a href="events.html" class="nav-item nav-link " style="color:#964B00">Eventos</a>
                     <a href="contact.html" class="nav-item nav-link  " style="color:#964B00">Contactanos</a>
                 </div>
             </div>
