--- a/index.html
+++ b/index.html
@@ -45,11 +45,9 @@
             </button>
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse" >
                 <div class="navbar-nav ml-auto p-4" >
-                    <a href="index.html" class="nav-item nav-link active" style="color:#964B00">Inicio</a>
-                    <a href="about.html" class="nav-item nav-link " style="color:#964B00">Sobre Nosotros</a>
-                    <a href="service.html" class="nav-item nav-link " style="color:#964B00">Productos</a>
-                    <a href="anuncios.html" class="nav-item nav-link " style="color:#964B00">Eventos</a>
-                    <a href="contact.html" class="nav-item nav-link  " style="color:#964B00">Contactanos</a>
+                    <!--<a href="indexPrueba.html" class="nav-item nav-link active" style="color:#964B00">Inicio</a>-->
+                    <a href="login.html" class="nav-item nav-link " style="color:#964B00">Login</a>
+
                 </div>
             </div>
         </nav>
@@ -79,16 +77,16 @@
                 <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">PONERSE EN CONTACTO</h4>
                 <p><i class="fa fa-map-marker-alt mr-2"></i>Parque Industrial -Arequipa</p>
                 <p><i class="fa fa-phone-alt mr-2"></i>+54 258760</p>
-                <p class="m-0"><i class="fa fa-envelope mr-2"></i>likalees@asociacion.com</p>
+                <p class="m-0"><i class="fa fa-envelope mr-2"></i>likalees@gmail.com</p>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
                 <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">SÍGANOS</h4>
                 <p>Acompañanos en las redes sociales y mantente al tanto de nuestras últimas novedades, promociones y eventos especiales.</p>
                 <div class="d-flex justify-content-start">
-                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
+
                     <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-lg btn-outline-light btn-lg-square" href="#"><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fa-brands fa-tiktok"></i></a>
+
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
