--- a/service.html
+++ b/service.html
@@ -67,8 +67,8 @@
     <div class="container-fluid pt-5">
         <div class="container">
             <div class="section-title">
-                <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">Our Services</h4>
-                <h1 class="display-4">Fresh & Organic Beans</h1>
+                <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">Catalogo</h4>
+                <h1 class="display-4">Productos Variados</h1>
             </div>
             <div class="row">
                 <div class="col-lg-6 mb-5">
