--- a/service.html
+++ b/service.html
@@ -79,52 +79,72 @@
                 <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">Catalogo</h4>
                 <h1 class="display-4">Variados</h1>
             </div>
-            <div class="row">
+             <div class="row">
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
                             <img class="img-fluid mb-3 mb-sm-0" src="img/carameloE.png" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-truck service-icon"></i>Caramelo Energizante</h4>
-                            <p class="m-0">Experimenta una explosión de energía y sabor en cada bocado. Nuestros caramelos están diseñados para revivir tus sentidos y proporcionarte la vitalidad que necesitas. Cada dulce es una mezcla perfecta de sabores intensos y un impulso de energía natural</p>
+                            <h4>
+                                <a href="caramelo.html" style="text-decoration: none; color: inherit;">
+                                    <i class="fa fa-truck service-icon"></i>Energix - Candy
+                                </a>
+                            </h4>
+
+                            <p class="m-0"> Experimenta una explosión de energía y sabor en cada bocado. Nuestros caramelos están diseñados para revivir tus sentidos y proporcionarte la vitalidad que necesitas. Cada dulce es una mezcla perfecta de sabores intensos y un impulso de energía natural</p>
                         </div>
+
                     </div>
                 </div>
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/service-2.jpg" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/barraE.png" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-coffee service-icon"></i>Energix - Bar </h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit
-                                invidunt, dolore tempor diam ipsum takima erat tempor</p>
+                            <h4>
+                                <a href="caramelo.html" style="text-decoration: none; color: inherit;">
+                                    <i class="fa fa-truck service-icon"></i>Energix - Bar
+                                </a>
+                            </h4>
+                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit invidunt, dolore tempor diam ipsum takima erat tempor. Sit lorem ipsum et diam elitr est dolor sed duo. uberg sea et et lorem dolor sed est sit
+                            invidunt, dolore tempor diam ipsum takima erat tempor</p>
                         </div>
+
                     </div>
                 </div>
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/service-3.jpg" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/drinkE.png" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-award service-icon"></i>Best Quality Coffee</h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit
-                                invidunt, dolore tempor diam ipsum takima erat tempor</p>
+                            <h4>
+                                <a href="caramelo.html" style="text-decoration: none; color: inherit;">
+                                    <i class="fa fa-truck service-icon"></i>Energix - Drink
+                                </a>
+                            </h4>
+                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit invidunt, dolore tempor diam ipsum takima erat tempor. </p>
                         </div>
                     </div>
+
                 </div>
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/service-4.jpg" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/poloHM.jpg" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-table service-icon"></i>Online Table Booking</h4>
+                            <h4>
+                                <a href="caramelo.html" style="text-decoration: none; color: inherit;">
+                                    <i class="fa fa-truck service-icon"></i>Accessories
+                                </a>
+                            </h4>
                             <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit
                                 invidunt, dolore tempor diam ipsum takima erat tempor</p>
                         </div>
+
                     </div>
                 </div>
             </div>
