--- a/service.html
+++ b/service.html
@@ -104,7 +104,7 @@
                         </div>
                         <div class="col-sm-7">
                             <h4>
-                                <a href="caramelo.html" style="text-decoration: none; color: inherit;">
+                                <a href="bar.html" style="text-decoration: none; color: inherit;">
                                     <i class="fa fa-truck service-icon"></i>Energix - Bar
                                 </a>
                             </h4>
@@ -121,7 +121,7 @@
                         </div>
                         <div class="col-sm-7">
                             <h4>
-                                <a href="caramelo.html" style="text-decoration: none; color: inherit;">
+                                <a href="drink.html" style="text-decoration: none; color: inherit;">
                                     <i class="fa fa-truck service-icon"></i>Energix - Drink
                                 </a>
                             </h4>
@@ -137,7 +137,7 @@
                         </div>
                         <div class="col-sm-7">
                             <h4>
-                                <a href="caramelo.html" style="text-decoration: none; color: inherit;">
+                                <a href="accessories.html" style="text-decoration: none; color: inherit;">
                                     <i class="fa fa-truck service-icon"></i>Accessories
                                 </a>
                             </h4>
