--- a/bar.html
+++ b/bar.html
@@ -48,7 +48,8 @@
                     <a href="about.html" class="nav-item nav-link " style="color:#964B00">Sobre Nosotros</a>
                     <a href="service.html" class="nav-item nav-link " style="color:#964B00">Catalogo</a>
                     <a href="anuncios.html" class="nav-item nav-link " style="color:#964B00">Eventos</a>
-                    <a href="refundPolicies.html" class="nav-item nav-link " style="color:#964B00">Politicas</a>
+					<a href="promociones.html" class="nav-item nav-link " style="color:#964B00">Promociones</a>
+					<a href="refundPolicies.html" class="nav-item nav-link " style="color:#964B00">Politicas</a>
                     <a href="contact.html" class="nav-item nav-link  " style="color:#964B00">Contactanos</a>
                 </div>
             </div>
@@ -86,7 +87,10 @@
                             <img class="img-fluid mb-3 mb-sm-0" src="img/barraE1.png" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-truck service-icon"></i>Barra De </h4>
+                            <h4><i class="fa fa-truck service-icon"></i>Energix - Bar De Cafe </h4>
+							<p>Deliciosa barra de café para disfrutar en cualquier momento del día.</p>
+							<p>150 gr.</p>
+							<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/7.00</p>
                         </div>
                         <div class="mt-3"style ="margin:auto;" >
                             <div class="input-group">
@@ -104,9 +108,12 @@
                             <img class="img-fluid mb-3 mb-sm-0" src="img/barraE2.png" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-coffee service-icon"></i>Barra De </h4>
+                            <h4><i class="fa fa-coffee service-icon"></i>Energix - Bar De Frutas Secas </h4>							
+							<p>Experimenta la frescura natural en cada bocado con nuestras deliciosas barras de frutas secas.</p>
+							<p>150 gr.</p>
+							<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/7.00</p>
                         </div>
-                                                <div class="mt-3"style ="margin:auto;" >
+                        <div class="mt-3"style ="margin:auto;" >
                             <div class="input-group">
                                 <input type="number" class="form-control" placeholder="Cantidad">
                                 <div class="input-group-append">
@@ -122,10 +129,14 @@
                             <img class="img-fluid mb-3 mb-sm-0" src="img/barraE3.png" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-award service-icon"></i>Barra De </h4>
+                            <h4><i class="fa fa-award service-icon"></i>Energix - Bar De Miel </h4>
+							<p>El dulce sabor de la naturaleza en cada barra de miel, un placer auténtico en cada momento.</p>
+							<p>150 gr.</p>
+							<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/7.00</p>
+							
                         </div>
                     </div>
-                                            <div class="mt-3"style ="margin:auto;" >
+                        <div class="mt-3"style ="margin:auto;" >
                             <div class="input-group">
                                 <input type="number" class="form-control" placeholder="Cantidad">
                                 <div class="input-group-append">
@@ -175,9 +186,8 @@
                 <p>Acompañanos en las redes sociales y mantente al tanto de nuestras últimas novedades, promociones y eventos especiales.</p>
                 <div class="d-flex justify-content-start">
 
-                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-tiktok"></i></a>
-
+                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="https://www.facebook.com/profile.php?id=61552912798444&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="https://www.tiktok.com/@energixcaramelo?_t=8gtXomKHgqE&_r=1 "><i class="fab fa-tiktok"></i></a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
