--- a/refundPolicies.html
+++ b/refundPolicies.html
@@ -21,20 +21,19 @@
     <!-- Libraries Stylesheet -->
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
-
-    <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.min.css" rel="stylesheet">
+    <!-- Customized Bootstrap Stylesheet -->
         <style>
         .btn-negro {
         background-color: #552213;
         border: 3px; 
         color: white;
         }
-    </style>
+        </style>
 </head>
 
 <body>
-    <!-- Navbar Start -->
+     <!-- Navbar Start -->
     <div class="container-fluid p-0 nav-bar">
         <nav class="navbar navbar-expand-lg bg-white navbar-dark py-3">
                 <a href="#">
@@ -45,105 +44,41 @@
             </button>
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse" >
                 <div class="navbar-nav ml-auto p-4" >
-                    <a href="inicio.html" class="nav-item nav-link active" style="color:#964B00">Inicio</a>
+                    <a href="index.html" class="nav-item nav-link active" style="color:#964B00">Inicio</a>
                     <a href="about.html" class="nav-item nav-link " style="color:#964B00">Sobre Nosotros</a>
                     <a href="service.html" class="nav-item nav-link " style="color:#964B00">Catalogo</a>
-                    <a href="events.html" class="nav-item nav-link " style="color:#964B00">Eventos</a>
+                    <a href="anuncios.html" class="nav-item nav-link " style="color:#964B00">Eventos</a>
 					<a href="promociones.html" class="nav-item nav-link " style="color:#964B00">Promociones</a>
-                    <a href="refundPolicies.html" class="nav-item nav-link " style="color:#964B00">Politicas</a>
+					<a href="refundPolicies.html" class="nav-item nav-link " style="color:#964B00">Politicas</a>
                     <a href="contact.html" class="nav-item nav-link  " style="color:#964B00">Contactanos</a>
                 </div>
             </div>
         </nav>
     </div>
 
-    <!-- Page Header Start -->
-    <div class="container-fluid page-header mb-5 position-relative overlay-bottom">
-        <div class="d-flex flex-column align-items-center justify-content-center pt-0 pt-lg-5" style="min-height: 400px">
-            <h1 class="display-4 mb-3 mt-0 mt-lg-5 text-white text-uppercase">Politicas</h1>
-            <div class="d-inline-flex mb-lg-5">
-                <p class="m-0 text-white"><a class="text-white" href="">Inicio</a></p>
-                <p class="m-0 text-white px-2">/</p>
-                <p class="m-0 text-white">Politicas</p>
-            </div>
-        </div>
-    </div>
-    <!-- Page Header End -->
-
-    <!-- Page Content Start -->
-    <div class="container mt-5">
-        <div class="row">
-            <div class="col-md-12">
-                <h1 class="text-primary">Políticas de Reembolso de Likalees</h1>
-                <p>Gracias por comprar en Likalees. Si no estás completamente satisfecho con tu compra, estamos aquí para ayudarte.</p>
-
-                <h2>Devoluciones</h2>
-                <p>Tienes 30 días calendario desde la fecha de tu compra para devolver un producto. Para ser elegible para una devolución, el artículo debe estar sin usar y en las mismas condiciones en que lo recibiste. Debe estar en el empaque original y necesitarás el recibo o prueba de compra.</p>
-
-                <h2>Reembolsos</h2>
-                <p>Una vez que recibamos tu artículo, lo inspeccionaremos y te notificaremos que hemos recibido tu producto devuelto. Inmediatamente después, te informaremos sobre el estado de tu reembolso tras la inspección del artículo. Si tu devolución es aprobada, iniciaremos un reembolso a tu tarjeta de crédito (o método original de pago). Recibirás el crédito en un plazo determinado, dependiendo de las políticas de tu proveedor de tarjeta de crédito.</p>
-
-                <h2>Productos dañados o defectuosos</h2>
-                <p>Si recibes un producto que está dañado o defectuoso, ponte en contacto con nosotros de inmediato para que podamos evaluar la situación y hacerlo bien.</p>
-
-                <h2>Excepciones</h2>
-                <p>Por razones de salud y seguridad, no podemos aceptar devoluciones de productos que hayan sido abiertos o utilizados, a menos que estén defectuosos.</p>
-
-                <h2>Gastos de envío</h2>
-                <p>Serás responsable de pagar tus propios gastos de envío para devolver tu artículo. Los gastos de envío no son reembolsables. Si recibes un reembolso, el costo del envío de la devolución será deducido de tu reembolso.</p>
-
-                <h2>Contacto</h2>
-                <p>Si tienes alguna pregunta sobre cómo devolver tu artículo, contáctanos al <a href="mailto:likalees@gmail.com">likalees@gmail.com</a> o al <a href="tel:+51907564917">+51 907564917</a>.</p>
-            </div>
-        </div>
-    </div>
-    <!-- Page Content End -->
+    <!-- Navbar End -->
 	
-	<div class="container mt-5">
-    <div class="row">
-        <div class="col-md-12">
-            <h1 class="text-primary">Políticas de Entrega de Likalees</h1>
-            <p>En Likalees, nos esforzamos por brindar un servicio de entrega confiable y eficiente. A continuación, detallamos nuestras políticas de entrega:</p>
+		<div><div>
+			<img src="img/promo1.png" alt="Promoción 1" width="300" height="400">
+			<img src="img/promo2.png" alt="Promoción 2" width="300" height="400">
+			<img src="img/promo3.png" alt="Promoción 3" width="300" height="400">
+		</div>
 
-            <h2>Proceso de Entrega</h2>
-            <p>Nuestro equipo se compromete a procesar tu pedido rápidamente. Una vez confirmado el pago, tu pedido será preparado para su envío en un plazo máximo de 2 días hábiles.</p>
-
-            <h2>Tiempo de Entrega</h2>
-            <p>El tiempo de entrega estándar es de 3 a 5 días hábiles a partir del día en que se procesa tu pedido. Ten en cuenta que los tiempos de entrega pueden variar dependiendo de la ubicación del destino.</p>
-
-            <h2>Gastos de Envío</h2>
-            <p>Los gastos de envío se calculan al finalizar tu compra y varían según la ubicación de entrega. Ofrecemos opciones de envío estándar y express con tarifas diferenciadas.</p>
-
-            <h2>Seguimiento de Pedidos</h2>
-            <p>Una vez despachado tu pedido, recibirás un número de seguimiento para poder rastrear tu envío. Podrás monitorear el estado de tu entrega en tiempo real.</p>
-
-            <h2>Entrega de Productos</h2>
-            <p>Es importante que alguien esté presente en la dirección de entrega para recibir los productos. En caso de no encontrarse nadie, se dejará una notificación para coordinar una segunda entrega.</p>
-
-            <h2>Atención al Cliente</h2>
-            <p>Si necesitas ayuda con tu pedido o la entrega, nuestro equipo de atención al cliente está disponible para asistirte. Contáctanos mediante nuestro correo electrónico <a href="mailto:likalees@gmail.com">likalees@gmail.com</a> o llámanos al <a href="tel:+51907564917">+51 907564917</a>.</p>
-        </div>
-    </div>
-</div>
-
-
-    <!-- Footer Start -->
+   <!-- Footer Start -->
     <div class="container-fluid footer text-white mt-5 pt-5 px-0 position-relative overlay-top">
         <div class="row mx-0 pt-5 px-sm-3 px-lg-5 mt-4">
             <div class="col-lg-3 col-md-6 mb-5">
                 <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">PONERSE EN CONTACTO</h4>
                 <p><i class="fa fa-map-marker-alt mr-2"></i>Parque Industrial -Arequipa</p>
                 <p><i class="fa fa-phone-alt mr-2"></i>+54 258760</p>
-                <p class="m-0"><i class="fa fa-envelope mr-2"></i>likalees@asociacion.com</p>
+                <p class="m-0"><i class="fa fa-envelope mr-2"></i>likalees@gmail.com</p>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
                 <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">SÍGANOS</h4>
                 <p>Acompañanos en las redes sociales y mantente al tanto de nuestras últimas novedades, promociones y eventos especiales.</p>
                 <div class="d-flex justify-content-start">
-
-                 <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="https://www.facebook.com/profile.php?id=61552912798444&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+<a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="https://www.facebook.com/profile.php?id=61552912798444&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
                     <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="https://www.tiktok.com/@energixcaramelo?_t=8gtXomKHgqE&_r=1 "><i class="fab fa-tiktok"></i></a>
-
 
                 </div>
             </div>
@@ -176,8 +111,13 @@
     </div>
     <!-- Footer End -->
 
+	<div>
+		<img src="promo1.png" alt="Promoción 1" width="300" height="400">
+		<img src="promo2.png" alt="Promoción 2" width="300" height="400">
+		<img src="promo3.png" alt="Promoción 3" width="300" height="400">
+	</div>
 
-
+	
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
