--- a/service.html
+++ b/service.html
@@ -49,6 +49,7 @@
                     <a href="about.html" class="nav-item nav-link " style="color:#964B00">Sobre Nosotros</a>
                     <a href="service.html" class="nav-item nav-link " style="color:#964B00">Catalogo</a>
                     <a href="events.html" class="nav-item nav-link " style="color:#964B00">Eventos</a>
+					<a href="promociones.html" class="nav-item nav-link " style="color:#964B00">Promociones</a>
                     <a href="refundPolicies.html" class="nav-item nav-link " style="color:#964B00">Politicas</a>
                     <a href="contact.html" class="nav-item nav-link  " style="color:#964B00">Contactanos</a>
                 </div>
@@ -108,8 +109,7 @@
                                     <i class="fa fa-truck service-icon"></i>Energix - Bar
                                 </a>
                             </h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit invidunt, dolore tempor diam ipsum takima erat tempor. Sit lorem ipsum et diam elitr est dolor sed duo. uberg sea et et lorem dolor sed est sit
-                            invidunt, dolore tempor diam ipsum takima erat tempor</p>
+                            <p class="m-0">Prueba una exquisita combinación de sabores con estas barras energéticas que te ayudarán a recargar tu energía! Son ideales para revitalizarte en momentos de baja energía.</p>
                         </div>
 
                     </div>
@@ -125,7 +125,7 @@
                                     <i class="fa fa-truck service-icon"></i>Energix - Drink
                                 </a>
                             </h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit invidunt, dolore tempor diam ipsum takima erat tempor. </p>
+                            <p class="m-0">Descubre una exquisita sensación de sabores nutricionales y energéticos que te brinda nuestra bebida. Las ventajas y beneficios que  te brindarán te dejará sorprendido y con muchas energías para tus actividades. </p>
                         </div>
                     </div>
 
@@ -141,8 +141,7 @@
                                     <i class="fa fa-truck service-icon"></i>Accessories
                                 </a>
                             </h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit
-                                invidunt, dolore tempor diam ipsum takima erat tempor</p>
+                            <p class="m-0">Cada accesorio es único y comparte colores acordé a cada personalidad. Experimenta utilizar un accesorio para cualquier actividad cotidiana y notarás la autenticidad al caminar</p>
                         </div>
 
                     </div>
@@ -167,8 +166,8 @@
                 <p>Acompañanos en las redes sociales y mantente al tanto de nuestras últimas novedades, promociones y eventos especiales.</p>
                 <div class="d-flex justify-content-start">
 
-                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-tiktok"></i></a>
+                <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="https://www.facebook.com/profile.php?id=61552912798444&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="https://www.tiktok.com/@energixcaramelo?_t=8gtXomKHgqE&_r=1 "><i class="fab fa-tiktok"></i></a>
 
 
                 </div>
