--- a/events.html
+++ b/events.html
@@ -68,6 +68,7 @@
                     <a href="about.html" class="nav-item nav-link " style="color:#964B00">Sobre Nosotros</a>
                     <a href="service.html" class="nav-item nav-link " style="color:#964B00">Catalogo</a>
                     <a href="events.html" class="nav-item nav-link " style="color:#964B00">Eventos</a>
+					<a href="promociones.html" class="nav-item nav-link " style="color:#964B00">Promociones</a>
                     <a href="refundPolicies.html" class="nav-item nav-link " style="color:#964B00">Politicas</a>
                     <a href="contact.html" class="nav-item nav-link  " style="color:#964B00">Contactanos</a>
 
@@ -144,8 +145,9 @@
                 <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">SÍGANOS</h4>
                 <p>Acompañanos en las redes sociales y mantente al tanto de nuestras últimas novedades, promociones y eventos especiales.</p>
                 <div class="d-flex justify-content-start">
-                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-tiktok"></i></a>
+                     <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="https://www.facebook.com/profile.php?id=61552912798444&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+                 <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="https://www.tiktok.com/@energixcaramelo?_t=8gtXomKHgqE&_r=1 "><i class="fab fa-tiktok"></i></a>
+
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
