--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
                 <h1 class="mb-3">Nuestra Historia</h1>
                 <p style="text-align: justify;">Hace un tiempo, cuatro mujeres apasionadas y amantes del café se unieron con un sueño en común: 
                     llevar la magia del café a un nuevo nivel de dulzura y energía. Con un espíritu emprendedor, decidieron 
-                    combinar sus talentos y conocimientos para crear "LiKaleas", una marca que revolucionaría el mundo de 
+                    combinar sus talentos y conocimientos para crear "LiKalees", una marca que revolucionaría el mundo de 
                     los caramelos. Cada una aportó su experiencia única en áreas como la gastronomía, la gestión empresarial,
                     la creatividad y la sostenibilidad. Juntas, transformaron su visión en realidad, desarrollando caramelos 
                     a base de café que no solo deleitan los paladares, sino que también recargan de energía. Su compromiso 
@@ -101,7 +101,7 @@
             </div>
             <div class="col-lg-6 py-5 py-lg-0">
                 <h1 class="mb-3">Misión</h1>
-                <p style="text-align: justify;">Nuestra misión en LiKaleas es impulsar un cambio en la industria al proporcionar productos energéticos excepcionales que marcan la diferencia en el mercado. Nos comprometemos a colaborar con las tendencias sostenibles y a concienciar a nuestros clientes sobre la importancia de estas tendencias medioambientales. Estamos dedicados a ofrecer productos de alta calidad que no solo satisfacen las necesidades de energía de nuestros clientes, sino que también contribuyen al bienestar del planeta.
+                <p style="text-align: justify;">Nuestra misión en LiKalees es impulsar un cambio en la industria al proporcionar productos energéticos excepcionales que marcan la diferencia en el mercado. Nos comprometemos a colaborar con las tendencias sostenibles y a concienciar a nuestros clientes sobre la importancia de estas tendencias medioambientales. Estamos dedicados a ofrecer productos de alta calidad que no solo satisfacen las necesidades de energía de nuestros clientes, sino que también contribuyen al bienestar del planeta.
                 </p>
             </div>
             <div class="col-lg-6 py-5 py-lg-0">
@@ -148,7 +148,7 @@
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
                 <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">BOLETIN INFORMATIVO</h4>
-                <p>En "LiKaleas", estamos emocionadas de compartir contigo nuestras últimas novedades y eventos relacionados con nuestros productos</p>
+                <p>En "LiKalees", estamos emocionadas de compartir contigo nuestras últimas novedades y eventos relacionados con nuestros productos</p>
                 <div class="w-100">
                     <div class="input-group">
                         <input type="text" class="form-control border-light" style="padding: 25px;" placeholder="Your Email">
